fixed package.json error

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Stripe API boilerplate",
+  "name": "",
   "version": "1.0.0",
   "description": "App to sell ebook",
   "main": "app.js",
