--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "",
   "version": "1.0.0",
-  "description": "App to sell ebook",
+  "description": "App to sell ice rods",
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
